<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="133dp"
        android:layout_height="51dp"
        android:text="@string/Number1"
        android:textColor="#1B1818"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="133dp"
        android:layout_height="51dp"
        android:text="@string/Number2"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/inputNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/txt1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/inputNumber2"
        android:layout_width="205dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@+id/inputNumber1"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/LblSum"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="292dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:onClick="Add"
        android:text="@string/btnplus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblSum"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:id="@+id/button3"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:onClick="Multiplication"
        android:text="@string/btnMultiply"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblSum"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/button2"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:onClick="Subtraction"
        android:text="@string/btnMinus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/LblSum"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/button4"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:onClick="Division"
        android:text="@string/btnDevide"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/LblSum"
        app:layout_constraintVertical_bias="0.684" />

</androidx.constraintlayout.widget.ConstraintLayout>